examples/pass/shadowing_type_conflict.uplp
-- category = 'value'
--
-- [metadata]
-- type = 'Unit'
let f = |x: Num| |x: Unit| (x : Unit) in f 1 ()