examples/fail/function_arg_type_mismatch.uplp
-- category = "error"
--
-- [metadata]
-- error = "Type.mismatch"
--
-- [metadata.expectation]
-- expected = "Num"
-- got = "Unit"
let f = |x: Num| true in
f ()